--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
 
-    compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
     apt 'com.github.hotchemi:permissionsdispatcher-processor:2.1.3'
 
-    compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
+    compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.github.angads25:filepicker:1.0.2'
 }
