--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,12 @@ android {
     }
 }
 
+allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
@@ -33,4 +39,6 @@ dependencies {
     compile 'com.github.hotchemi:permissionsdispatcher:2.1.3'
     compile 'com.jakewharton:butterknife:8.2.1'
     compile 'com.github.angads25:filepicker:1.0.2'
+
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 }
